deploy and nginx config fixes

--- a/etc/yl.la.conf
+++ b/etc/yl.la.conf
@@ -1,13 +1,13 @@
 server {
     listen      80;
     server_name	*.yl.la;
-    return      301 $scheme://yl.la$request_uri;
+    return      301 https://yl.la$request_uri;
 }
 
 server {
 		server_name	yl.la;
     index      	index.html;
-    root       	/home/ubuntu/www/ylla/ylla-web/dist;
+    root       	/home/ubuntu/www/ylla/ylla-web/build;
 
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
@@ -25,16 +25,4 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
-}
-
-
-server {
-    if ($host = yl.la) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    listen 80 ;
-    listen [::]:80 ;
-    server_name yl.la;
-    return 404; # managed by Certbot
 }
