--- a/etc/dev.yl.la.conf
+++ b/etc/dev.yl.la.conf
@@ -1,14 +1,14 @@
 server {
+    listen [::]:80;
     listen      80;
     server_name	*.dev.yl.la;
-    return      301 $scheme://dev.yl.la$request_uri;
+    return      301 https://dev.yl.la$request_uri;
 }
 
 server {
 		server_name	dev.yl.la;
     index      	index.html;
-    root       	/home/ubuntu/www/ylla/ylla-web/dist;
-
+    root       	/home/ubuntu/www/ylla/ylla-web/build;
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
@@ -25,16 +25,4 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
-}
-
-
-server {
-    if ($host = dev.yl.la) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    listen 80 ;
-    listen [::]:80 ;
-    server_name dev.yl.la;
-    return 404; # managed by Certbot
 }
