update config and scripts

--- a/etc/dev.yl.la.conf
+++ b/etc/dev.yl.la.conf
@@ -1,7 +1,7 @@
 server {
     listen [::]:80;
     listen      80;
-    server_name	*.dev.yl.la;
+    server_name	www.dev.yl.la;
     return      301 https://dev.yl.la$request_uri;
 }
 
@@ -16,6 +16,8 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/dev.yl.la/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+    client_max_body_size 10M;
 
     location /api {
         proxy_pass http://localhost:3000;
