--- a/etc/yl.la.conf
+++ b/etc/yl.la.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name	www.yl.la;
+    server_name	www.yl.la yl.la;
     return      301 https://yl.la$request_uri;
 }
 
