--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.16.2",
     "chart.js": "^2.7.3",
+    "dotenv": "^6.1.0",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.48.0",
     "mui-datatables": "^2.0.0-beta-32",
@@ -38,7 +39,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-		"deploy": "npm run build && ./bin/deploy.sh"
+    "deploy": "npm run build && ./bin/deploy.sh"
   },
   "proxy": "http://localhost:4000/",
   "devDependencies": {
