--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   "proxy": "http://localhost:4000/",
   "devDependencies": {
     "css-loader": "^1.0.0"
-  }
+  },
+  "license": "SEE LICENSE IN LICENSE"
 }
