--- a/package.json
+++ b/package.json
@@ -6,32 +6,32 @@
     "@mapbox/mapbox-gl-directions": "^3.1.3",
     "@mapbox/mapbox-gl-geocoder": "^2.3.0",
     "@material-ui/codemod": "^1.1.0",
-    "@material-ui/core": "^3.2.2",
+    "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
     "@turf/turf": "^5.1.6",
-    "ajv": "^6.5.4",
+    "ajv": "^6.6.1",
     "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.16.2",
+    "axios": "^0.18.0",
     "chart.js": "^2.7.3",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "jquery": "^3.3.1",
-    "mapbox-gl": "^0.48.0",
-    "mui-datatables": "^2.0.0-beta-32",
-    "react": "^16.5.2",
-    "react-autosuggest": "^9.4.2",
-    "react-chartjs-2": "^2.7.4",
-    "react-dom": "^16.5.2",
-    "react-dropzone": "^4.3.0",
-    "react-event-listener": "^0.6.4",
-    "react-image-gallery": "^0.8.12",
-    "react-image-lightbox": "^4.6.0",
-    "react-input-mask": "^1.2.2",
-    "react-mapbox-gl": "^3.9.2",
-    "react-moment": "^0.6.9",
-    "react-popper": "^1.0.2",
-    "react-scripts": "^1.1.5",
-    "talkjs": "^0.1.5",
-    "typeface-roboto": "0.0.43",
+    "mapbox-gl": "^0.51.0",
+    "mui-datatables": "^2.0.0-beta-41",
+    "react": "^16.x",
+    "react-autosuggest": "^9.x",
+    "react-chartjs-2": "^2.x",
+    "react-dom": "^16.x",
+    "react-dropzone": "^4.x",
+    "react-event-listener": "^0.x",
+    "react-image-gallery": "^0.x",
+    "react-image-lightbox": "^4.x",
+    "react-input-mask": "^1.x",
+    "react-mapbox-gl": "^3.x",
+    "react-moment": "^0.8.4",
+    "react-popper": "^1.x",
+    "react-scripts": "^1.x",
+    "talkjs": "^0.6.1",
+    "typeface-roboto": "^0.x",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -43,7 +43,7 @@
   },
   "proxy": "http://localhost:4000/",
   "devDependencies": {
-    "css-loader": "^1.0.0"
+    "css-loader": "^2.x"
   },
   "license": "SEE LICENSE IN LICENSE"
 }
