--- a/etc/yl.la.conf
+++ b/etc/yl.la.conf
@@ -5,12 +5,11 @@ server {
 }
 
 server {
-		server_name	yl.la;
+    server_name	yl.la;
     index      	index.html;
     root       	/home/ubuntu/www/ylla/ylla-web/build;
 
-
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    ##listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/yl.la/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/yl.la/privkey.pem; # managed by Certbot
