--- a/etc/dev.yl.la.conf
+++ b/etc/dev.yl.la.conf
@@ -1,16 +1,15 @@
 server {
-    listen [::]:80;
     listen      80;
-    server_name	www.dev.yl.la;
+    server_name	www.dev.yl.la dev.yl.la;
     return      301 https://dev.yl.la$request_uri;
 }
 
 server {
-		server_name	dev.yl.la;
+    server_name	dev.yl.la;
     index      	index.html;
     root       	/home/ubuntu/www/ylla/ylla-web/build;
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    #listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/dev.yl.la/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/dev.yl.la/privkey.pem; # managed by Certbot
